--- a/code/index.html
+++ b/code/index.html
@@ -5,17 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" type="text/css" href="pizza-style.css.css">
   <title>Project 4: Pizzabot</title>
 </head>
-
 <body>
+  <wrapper>
+
   <h1>This is your Pizza Bot</h1>
 
-  <p id="greeting">
-    Hey! Happy to serve you pizza. On our menu we have Vegetarian, Pepperoni and Hawaiian pizza.
-  </p>
+  <div id="greeting">
+    Hey! Happy to serve you pizza. On our menu we have Vegetarian, Pepperoni and Hawaiian pizza. Simply type your order below.
+  </div>
 
-
+</wrapper>
   <script src="pizzabot.js"></script>
 </body>
 
